# fishregression

./: Dockerfile  README.md  pyproject.toml
LB/: default.conf
note/: KNeighborsRegressor.ipynb  LinearRegression.ipynb  Untitled.ipynb  regression.ipynb
src/fishregression/: cli.py  main.py
src/fishregression/model/: manager.py  model.pkl
